[gd_scene load_steps=10 format=2]

[ext_resource path="res://source/interface/Interface.gd" type="Script" id=1]
[ext_resource path="res://source/interface/SpriteBuilder.gd" type="Script" id=2]
[ext_resource path="res://data/core/images/terrain/cursor.png" type="Texture" id=3]
[ext_resource path="res://themes/wesnoth.theme" type="Theme" id=4]
[ext_resource path="res://source/interface/popups/AttackPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/interface/popups/RecruitPopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/interface/TopPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://source/interface/BottomPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://source/interface/minimap/MiniMap.tscn" type="PackedScene" id=9]

[node name="Interface" type="Node2D" index="0"]

script = ExtResource( 1 )
path_texture = null

[node name="SpriteBuilder" type="Node2D" parent="." index="0"]

script = ExtResource( 2 )

[node name="GridContainer" type="Node" parent="SpriteBuilder" index="0"]

[node name="DarkenContainer" type="Node" parent="SpriteBuilder" index="1"]

[node name="Cursor" type="Sprite" parent="." index="1"]

z_index = 20
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="DefenseLabel" type="Label" parent="Cursor" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -36.0
margin_top = -36.0
margin_right = -36.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "Rect" ]

[node name="HUD" type="CanvasLayer" parent="." index="2"]

layer = 5
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="AttackPopup" parent="HUD" index="0" instance=ExtResource( 5 )]

visible = false
margin_top = 20.0
margin_bottom = 40.0
theme = ExtResource( 4 )

[node name="RecruitPopup" parent="HUD" index="1" instance=ExtResource( 6 )]

visible = false
margin_left = 514.0
margin_top = 306.0
margin_right = 534.0
margin_bottom = 326.0
theme = ExtResource( 4 )

[node name="TopPanel" parent="HUD" index="2" instance=ExtResource( 7 )]

anchor_left = 1.0
anchor_right = 1.0
margin_left = -817.0
margin_right = 0.0

[node name="BottomPanel" parent="HUD" index="3" instance=ExtResource( 8 )]

anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -95.0
margin_right = 568.0
margin_bottom = 0.0

[node name="EndTurn" type="Button" parent="HUD" index="4"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -106.0
margin_top = -32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Turn End"
flat = true
align = 1
_sections_unfolded = [ "Theme" ]

[node name="MiniMap" parent="HUD" index="5" instance=ExtResource( 9 )]


